create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2952,7 +2952,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCuqTqok1m {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rCurmDdit5 {
   padding-top: 15px;
@@ -4861,7 +4861,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCA0xjRgfg {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rCA0xjRgfg H1 {
   text-align: center;
@@ -6186,7 +6186,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCCSEU8Lm8 {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rCCV9JdIBd {
   padding-top: 15px;
@@ -8497,7 +8497,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCFn8e2LwD {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rCFnGeprjX {
   padding-top: 15px;
@@ -9724,7 +9724,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCUjPS03Nn {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rCUkh1SIzr {
   padding-top: 30px;
@@ -11347,7 +11347,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rDZTmLyIRF {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rE08WLv70b {
   padding-top: 30px;
@@ -12484,7 +12484,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rEy7PgwkMJ {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rEy8ze0i2y {
   padding-top: 15px;
@@ -12975,7 +12975,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rFMhXVBG3v {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rFMpvo2qRV {
   padding-top: 15px;
@@ -13525,7 +13525,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rGxfla9ASe {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rGxgHog3na {
   padding-top: 15px;
@@ -14583,7 +14583,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rH5SCxyf9r {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rHl6aQ33Pt {
   padding-top: 15px;
@@ -15660,7 +15660,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rHQpDxg1a7 {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background41.jpg");
 }
 .cid-rHQqDPNHlc {
   padding-top: 15px;
@@ -15691,6 +15691,7 @@ section.lazy-placeholder:after {
 }
 .cid-rHVet0Q9Fc .mbr-section-subtitle {
   color: #767676;
+  text-align: left;
 }
 .cid-rHVeGBNuth {
   background: #ffffff;
@@ -15720,6 +15721,7 @@ section.lazy-placeholder:after {
 }
 .cid-rHVxQUO1vt .mbr-section-subtitle {
   color: #767676;
+  text-align: left;
 }
 .cid-rHVxTPe6aS {
   padding-top: 15px;
@@ -15998,6 +16000,36 @@ section.lazy-placeholder:after {
 }
 .cid-rHVxTPe6aS .content-slider-wrap {
   width: 99%;
+}
+.cid-rHVZIuza0D {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHVZIuza0D .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHVZLgKJoI {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 15px;
+}
+.cid-rHVZLgKJoI .image-block {
+  margin: auto;
+}
+.cid-rHVZLgKJoI figcaption {
+  position: relative;
+}
+.cid-rHVZLgKJoI figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHVZLgKJoI .image-block {
+    width: 100% !important;
+  }
 }
 .cid-rHQpF4Ek7a {
   padding-top: 30px;
@@ -16398,4 +16430,351 @@ section.lazy-placeholder:after {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #2e2e2e;
+}
+.cid-rHW1uf5qIu {
+  background-image: url("../../../assets/images/background41.jpg");
+}
+.cid-rHW1SKvkZL {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1SKvkZL .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW26JRWrH {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW26JRWrH .image-block {
+  margin: auto;
+}
+.cid-rHW26JRWrH figcaption {
+  position: relative;
+}
+.cid-rHW26JRWrH figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW26JRWrH .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1T5tSkq {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1T5tSkq .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW27d6kLR {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW27d6kLR .image-block {
+  margin: auto;
+}
+.cid-rHW27d6kLR figcaption {
+  position: relative;
+}
+.cid-rHW27d6kLR figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW27d6kLR .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1TmQfcn {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1TmQfcn .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW27PgvWs {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW27PgvWs .image-block {
+  margin: auto;
+}
+.cid-rHW27PgvWs figcaption {
+  position: relative;
+}
+.cid-rHW27PgvWs figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW27PgvWs .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1TCLY5o {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1TCLY5o .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW28hzDV4 {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW28hzDV4 .image-block {
+  margin: auto;
+}
+.cid-rHW28hzDV4 figcaption {
+  position: relative;
+}
+.cid-rHW28hzDV4 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW28hzDV4 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1TXq77Y {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1TXq77Y .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW28HsLHB {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW28HsLHB .image-block {
+  margin: auto;
+}
+.cid-rHW28HsLHB figcaption {
+  position: relative;
+}
+.cid-rHW28HsLHB figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW28HsLHB .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1UsxyzZ {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1UsxyzZ .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW295UHFY {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW295UHFY .image-block {
+  margin: auto;
+}
+.cid-rHW295UHFY figcaption {
+  position: relative;
+}
+.cid-rHW295UHFY figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW295UHFY .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1Ss9btt {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1Ss9btt .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW29urMvh {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW29urMvh .image-block {
+  margin: auto;
+}
+.cid-rHW29urMvh figcaption {
+  position: relative;
+}
+.cid-rHW29urMvh figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW29urMvh .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1S8Kuwp {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1S8Kuwp .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW2a5INrv {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW2a5INrv .image-block {
+  margin: auto;
+}
+.cid-rHW2a5INrv figcaption {
+  position: relative;
+}
+.cid-rHW2a5INrv figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW2a5INrv .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1RMKrR0 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1RMKrR0 .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW2aznjzB {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW2aznjzB .image-block {
+  margin: auto;
+}
+.cid-rHW2aznjzB figcaption {
+  position: relative;
+}
+.cid-rHW2aznjzB figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW2aznjzB .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1QRlw4y {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1QRlw4y .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW2b16Ejm {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW2b16Ejm .image-block {
+  margin: auto;
+}
+.cid-rHW2b16Ejm figcaption {
+  position: relative;
+}
+.cid-rHW2b16Ejm figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW2b16Ejm .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1RlDqtp {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1RlDqtp .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rHW2bFkdVJ {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rHW2bFkdVJ .image-block {
+  margin: auto;
+}
+.cid-rHW2bFkdVJ figcaption {
+  position: relative;
+}
+.cid-rHW2bFkdVJ figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rHW2bFkdVJ .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1ZCxoa4 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rHW1ZCxoa4 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rHW1ZCxoa4 .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-rHW1ZCxoa4 H2 {
+  color: #ff3366;
 }
