--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2952,7 +2952,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCuqTqok1m {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rCurmDdit5 {
   padding-top: 15px;
@@ -4861,7 +4861,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCA0xjRgfg {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rCA0xjRgfg H1 {
   text-align: center;
@@ -6186,7 +6186,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCCSEU8Lm8 {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rCCV9JdIBd {
   padding-top: 15px;
@@ -8497,7 +8497,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCFn8e2LwD {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rCFnGeprjX {
   padding-top: 15px;
@@ -9724,7 +9724,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCUjPS03Nn {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rCUkh1SIzr {
   padding-top: 30px;
@@ -11347,7 +11347,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rDZTmLyIRF {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rE08WLv70b {
   padding-top: 30px;
@@ -12484,7 +12484,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rEy7PgwkMJ {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rEy8ze0i2y {
   padding-top: 15px;
@@ -12975,7 +12975,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rFMhXVBG3v {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rFMpvo2qRV {
   padding-top: 15px;
@@ -13525,7 +13525,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rGxfla9ASe {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rGxgHog3na {
   padding-top: 15px;
@@ -14583,7 +14583,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rH5SCxyf9r {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rHl6aQ33Pt {
   padding-top: 15px;
@@ -16474,6 +16474,318 @@ background-color: @bgColor;
 }
 }
 
+.cid-rI0LoAZ6UV {
+@paddingTop: 2;
+@paddingBottom: 1;
+@showTitle: true;
+@showSubtitle: false;
+@showText: false;
+@showButtons: false;
+@uname__10: "../../app/themes/mobirise4/components/content5/../_images/background4.jpg";
+@uname__11: false;
+@uname__12: #0f7699;
+@bg-value: "../../app/themes/mobirise4/components/content5/../_images/background4.jpg";
+@bg-type: "image";
+@bg-color-value: #0f7699;
+@bg-parallax: false;
+@overlay: false;
+@overlayColor: #232323;
+@overlayOpacity: 0.4;
+
+padding-top: (@paddingTop * 15px);
+padding-bottom: (@paddingBottom * 15px);
+& when (@bg-type = 'color') {
+  background-color: @bg-value;
+}
+& when (@bg-type = 'image') {
+  background-image: url(../../../@bg-value);
+}
+}
+
+.cid-rI0LFlhjqF {
+@typeSlider: "headerSlider";
+@paddingTop: 2;
+@paddingBottom: 0;
+@sliderWSize: 100;
+@sliderHSize: 540;
+@bgColor: #ffffff;
+@slides__autoplay: false;
+@slides__autoplayInterval: 4000;
+@slides__showBullets: true;
+@slides__embedded: "false";
+
+padding-top: (@paddingTop * 15px);
+padding-bottom: (@paddingBottom * 15px);
+background-color: @bgColor;
+.content-slider {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.modal-body .close {
+  background: #1b1b1b;
+}
+.modal-body .close span {
+  font-style: normal;
+}
+.carousel-inner > .active, .carousel-inner > .next, .carousel-inner > .prev {
+  display: -webkit-flex;
+}
+.carousel-control .icon-next, .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .content-slider-wrap {
+    width: 100%!important;
+  }
+}
+.boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.boxed-slider > div {
+  position: relative;
+}
+.container img {
+  width: 100%;
+}
+.container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.mbr-table-cell {
+  padding: 0;
+}
+.container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-align-items: center;
+}
+.mbr-overlay {
+  z-index: 1;
+}
+.container-slide.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+  .container {
+    @media (max-width: 576px) {
+      width: 100%;
+    }
+  }
+}
+.carousel-item-next.carousel-item-left, .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.active.carousel-item-right, .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.active.carousel-item-left, .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.mbr-slider {
+  .carousel-control {
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: -1.5rem;
+    font-size: 35px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border: 2px solid #fff;
+    border-radius: 50%;
+    transition: all .3s;
+    &.carousel-control-prev {
+      left: 0;
+      margin-left: 2.5rem;
+    }
+    &.carousel-control-next {
+      right: 0;
+      margin-right: 2.5rem;
+    }
+    .mbr-iconfont {
+      font-size: 1.5rem;
+    }
+    @media (max-width: 767px) {
+      top: auto;
+      bottom: 1rem;
+    }
+  }
+  .carousel-indicators {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 1.5rem !important;
+    li {
+      max-width: 15px;
+      height: 15px;
+      width: 15px;
+      max-height: 15px;
+      margin: 3px;
+      background-color: rgba(0, 0, 0, 0.5);
+      border: 2px solid #fff;
+      border-radius: 50%;
+      opacity: .5;
+      transition: all .3s;
+      &.active, &:hover {
+        opacity: .9;
+      }
+      &::after, &::before {
+        content: none;
+      }
+    }
+    &.ie-fix {
+      left: 50%;
+      display: block;
+      width: 60%;
+      margin-left: -30%;
+      text-align: center;
+    }
+    @media (max-width: 576px) {
+      display: none !important;
+    }
+  }
+  > .container {
+    img {
+      width: 100%;
+      + .row {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        left: 0;
+        z-index: 2;
+        -moz-transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%);
+      }
+    }
+    .carousel-indicators {
+      margin-bottom: 3px;
+    }
+    @media (max-width: 576px) {
+      .carousel-control {
+        margin-bottom: 0;
+      }
+    }
+  }
+  .mbr-section {
+    padding: 0;
+    background-attachment: scroll;
+  }
+  .mbr-table-cell {
+    padding: 0;
+  }
+}
+.carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.full-screen {
+  .slider-fullscreen-image {
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+    &.active {
+      display: -o-flex;
+    }
+  }
+  & .container {
+    width: auto;
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .carousel-item .container.container-slide {
+    width: 100%;
+    min-height: 100vh;
+    padding: 0;
+    & img {
+      display: none;
+    }
+  }
+}
+.mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.mbr-overlay ~ .container-slide {
+  z-index: auto;
+}
+.mbr-slider.slide .container {
+  overflow: hidden;
+  padding: 0;
+}
+.carousel-inner {
+  height: 100%;
+}
+.slider-fullscreen-image {
+  height: 100%;
+  background: transparent !important;
+}
+.image_wrapper {
+  height: (@sliderHSize * 1px);
+  width: 100%;
+  position: relative;
+  display: inline-block;
+}
+.image_wrapper img {
+  width: auto !important;
+  height: 100%;
+}
+.carousel-item .container-slide {
+  text-align: center;
+}
+.content-slider-wrap {
+  width: (@sliderWSize * 1%);
+}
+}
+
 .cid-rHQpF4Ek7a {
 @paddingTop: 2;
 @paddingBottom: 2;
@@ -16908,7 +17220,7 @@ H2 {
   background-color: #2e2e2e;
 }
 .cid-rHW1uf5qIu {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rHW1SKvkZL {
   padding-top: 15px;
